<resources>
    <string name="app_name">Medicare</string>
    <string name="user_credentials">"USER_CREDENTIALS</string>
    <string name="doctor_leaves">DOCTOR_LEAVES</string>
    <string name="doctor_slot">DOCTOR_SLOT</string>
    <string name="all_doctor_slots">all_doctor_slots</string>
    <string name="all_pending_appointment">all_pending_appointment</string>
    <string name="doctor_patient">DOCTOR_PATIENT</string>
    <string name="staff">STAFF</string>
    <string name="select_doctor">Select Doctor :</string>
    <string name="select_staff_member">Select Staff Member :</string>
    <string name="assign">Assign</string>
    <string name="apply_for_a_new_leave">Apply for a new leave</string>
    <string name="from">From</string>
    <string name="or">Or</string>
    <string name="view_previous">View Previous</string>
    <string name="yy">yy</string>
    <string name="to">To</string>
    <string name="assigned_staff">Assigned Staff</string>
    <string name="list_of_assigned_doctors">List of Assigned Doctors</string>
    <string name="your_specialization">Your Specialization</string>
    <string name="add_specialization">Add Specialization</string>
    <string name="et_sp1">et sp1</string>
    <string name="the_different_modules_covered_in_this_app_are_doctors_patients_staff_members_desktop_admin">The different modules covered in this app are: Doctors, Patients, Staff members, Desktop_admin</string>
    <string name="this_app_is_used_to_create_a_system_to_manage_all_the_operations_associated_with_a_hospital_the_different_modules_covered_in_this_app_are">This app is used to create a system to manage all the operations associated with a Hospital. THe different modules covered in this app are:</string>
    <string name="select_to_apply_for_appointment">Select to Apply For Appointment</string>
    <string name="login_or_register">Patient Login</string>
    <string name="services_provided">Staff Login</string>
    <string name="admin">Admin Login</string>
    <string name="current_patients">Current Patients</string>
    <string name="reports">Reports</string>
    <string name="approved">Approved</string>
    <string name="not_approved">Not Approved</string>
    <string name="write_report">Write Report</string>
    <string name="report">Report</string>
    <string name="submit_report">Submit Report</string>
    <string name="doctor_info">Doctor Information</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="i_fn">-</string>
    <string name="fees">Fees :</string>
    <string name="_1000">1000 /-</string>
    <string name="apply">Apply</string>
    <string name="new_appointment">New Appointment</string>
    <string name="patient_name">Patient Name :</string>
    <string name="problem">Problem</string>
    <string name="your_current_slot">Your Current Slot</string>
    <string name="update_your_slot">Update Your Slot</string>
    <string name="delete_users">Delete Users</string>
    <string name="grant_patient_appointment">Grant Patient Appointment</string>
    <string name="assign_staff">Assign Staff</string>
    <string name="view_all_remaining_bills">View All Remaining Bills</string>
    <string name="delete_user">Delete User</string>
    <string name="view_staff_assigned">View Staff Assigned</string>
    <string name="upload_current_patient_report">Upload Current Patient Report</string>
    <string name="set_your_referrel_timings">Set Your Referrel Timings</string>
    <string name="apply_view_leaves">Apply/View Leaves</string>
    <string name="add_view_specializations">Add/View Specializations</string>
    <string name="doctors_available">Doctors Available</string>
    <string name="patient_with_unpaid_bills">Patient with unpaid Bills</string>
    <string name="dd">dd</string>
    <string name="yyyy">yyyy</string>
    <string name="feedback">Feedback</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="all_pending_appointments">All Pending Appointments</string>
    <string name="welcome_to_hms">Welcome to HMS</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="preffered_slot">Preffered Slot</string>
    <string name="load_available_specialization">Load Available Specialization</string>
    <string name="select_doctor_s_specialization">Select Doctor\'s Specialization:</string>
    <string name="search">Search</string>
    <string name="available_doctor">Doctor Available</string>
    <string name="personal_info">Personal Info</string>
    <string name="appointment">Appointment</string>
    <string name="view_reports">View Reports</string>
    <string name="remaining_bills">Remaining Bills</string>
    <string name="give_view_feedback">Give/View Feedback</string>
    <string name="personal_details">Personal Details</string>
    <string name="name">Name :</string>
    <string name="sex">Sex :</string>
    <string name="dob">DOB :</string>
    <string name="b_group">B Group :</string>
    <string name="u_type">U Type :</string>
    <string name="city">City</string>
    <string name="m_no">M. No. :</string>
    <string name="update">Update</string>
    <string name="update_info">Update Info</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="pincode">Pin code</string>
    <string name="title_activity_patient_navigation">PatientNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="bills">Bills</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_staff_navigation">StaffNavigation</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_doctor_navigation">DoctorNavigation</string>
    <string name="title_activity_admin_navigation">AdminNavigation</string>
    <string name="map_api">AIzaSyCebaXhWtfKC8AeEHuFeqSMyiKPAVzDIb0</string>
    <string name="doctor">doctor</string>
    <string name="patient">patient</string>
    <string name="doctors_login">Doctors Login</string>
</resources>
