<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/pat_appointment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/appointment" />
        <item
            android:id="@+id/pat_reports"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/reports" />
        <item
            android:id="@+id/pat_bills"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/bills" />
        <item
            android:id="@+id/pat_feedback"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/feedback" />
        <item
            android:id="@+id/pat_d_availabe"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/doctors_available" />
        <item
            android:id="@+id/pat_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/profile" />
        <item
            android:id="@+id/pat_logout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/logout" />
    </group>

</menu>
