<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hospital"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_d_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/b_d_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/personal_info"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <Button
        android:id="@+id/b_add_specialization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/add_view_specializations"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <Button
        android:id="@+id/b_d_leaves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/apply_view_leaves"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <Button
        android:id="@+id/b_d_slot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/set_your_referrel_timings"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <Button
        android:id="@+id/b_d_upload_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/upload_current_patient_report"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <Button
        android:id="@+id/b_d_staff_assigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/view_staff_assigned"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <Button
        android:id="@+id/b_d_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/give_view_feedback"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <Button
        android:id="@+id/b_d_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textSize="17sp" />
</LinearLayout>