<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hospital"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_p_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text=""
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/b_p_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/personal_info"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <Button
        android:id="@+id/b_p_appointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/appointment"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <Button
        android:id="@+id/b_p_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/view_reports"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <Button
        android:id="@+id/b_p_bills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/remaining_bills"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <Button
        android:id="@+id/b_p_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/give_view_feedback"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <Button
        android:id="@+id/b_p_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:padding="15dp"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textSize="17sp" />

</LinearLayout>