<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hospitalmanagementsystem.doctor.leaves.Leaves">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/apply_for_a_new_leave"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/from"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <EditText
            android:id="@+id/etdd1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="39"
            android:gravity="center"
            android:hint="@string/dd"
            android:inputType="date"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnermonth1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="27"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/etyy1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="33"
            android:gravity="center"
            android:hint="@string/yy"
            android:inputType="date"
            android:textSize="20sp" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/to"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <EditText
            android:id="@+id/etdd2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="39"
            android:gravity="center"
            android:hint="@string/dd"
            android:inputType="date"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnermonth2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="27"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/etyy2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="33"
            android:gravity="center"
            android:hint="@string/yy"
            android:inputType="date"
            android:textSize="20sp" />


    </LinearLayout>

    <Button
        android:id="@+id/d_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:text="@string/apply"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/or"
        android:textSize="20sp" />

    <Button
        android:id="@+id/view_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:text="@string/view_previous"
        android:textAllCaps="false" />
</LinearLayout>
