<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="70dp"
        android:text="@string/preffered_slot"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner_slot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/b_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="onClick"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/load_available_specialization"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_doctor_s_specialization"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner_specialization"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/b_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="onClick"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/search" />

</LinearLayout>